# NEU-365P-385P-Spring-2025

./: .gitignore  README.md  pyproject.toml
docs/: course-info.md  discussion-board.md  python-environment-overview.md  sequence-convolution.md  setup-your-python-environment.md  statistical-inference.md  syllabus.md
homework/: maximum-likelihood-hw.ipynb  python-basics-2-hw.ipynb  python-basics-hw.ipynb  resampling-hw.ipynb
manim-presentations/: .gitignore
manim-presentations/python_crash_course/: python_crash_course.py
manim-presentations/utils/: __init__.py  config.py  utils.py
manim_presentations/python_crash_course/: python_crash_course.py  test.py
manim_presentations/utils/: __init__.py  config.py  utils.py
motion-canvas-presentations/python-crash-course/: package-lock.json  package.json
motion-canvas-presentations/python-crash-course/src/: project.ts
motion-canvas-presentations/python-crash-course/src/scenes/: python-crash-course.tsx
rise-presentations/LIF-neuron/: LIF-neuron.ipynb
rise-presentations/python-basics/: python-basics.ipynb
rise-presentations/random-walk-lab/: random-walk-lab-old.ipynb
